Also driveby tweak ch3

--- a/latex/ch3.tex
+++ b/latex/ch3.tex
@@ -215,7 +215,7 @@ The random search parameters are shown in Table \ref{table:slicqparams}. Note th
 \end{tabular}
 \end{table}
 
-The space of possible parameters is infinite, even with the ranges constrained as in Table \ref{table:slicqparams}. Therefore, an exhaustive grid search over all the possible parameters is impossible. I chose instead to do a random search over the parameter space. \textcite{randomgrid} found that in a hyperparameter search for a neural network,
+The space of possible parameters is infinite, even with the ranges constrained as in Table \ref{table:slicqparams}. Therefore, an exhaustive grid search over all the possible parameters is impossible. I chose instead to do a random search over the parameter space. \textcite{randomgrid} found that to search for hyperparameters in a neural network:
 
 \begin{quote}
 	[o]ften the extent of a search is determined by a computational budget, and with random search 64 trials are enough to find better models in a larger less promising space \parencite[293]{randomgrid}
